# jdpulse

./: .gitignore
jd-pulse-backend/: Dockerfile  pyproject.toml
jd-pulse-backend/jd_pulse_backend/: config.py  extraction.py  main.py
jd-pulse-backend/tests/: test_extraction.py
jd-pulse-frontend/: Dockerfile  README.md  package-lock.json  package.json  vite.config.js
jd-pulse-frontend-next/: next.config.js  package-lock.json  package.json
jd-pulse-frontend-next/src/: Dockerfile
jd-pulse-frontend-next/src/components/: Footer.tsx  Landing.tsx  Navbar.tsx
jd-pulse-frontend-next/src/pages/: _app.tsx  index.tsx
jd-pulse-frontend-next/src/pages/getKeywords/: index.tsx
jd-pulse-frontend-next/src/pages/get_keywords/: index.tsx
jd-pulse-frontend/src/: App.vue  main.js
jd-pulse-frontend/src/components/: Header.vue  Home.vue
model-tuning/: main.py  parameters.json  pyproject.toml
test/: linkedin_jd_retrieve.py
