[tool.poetry]
name = "jd-pulse-backend"
version = "0.1.0"
description = ""
authors = ["Maksim Panin <me@naxrevlis.com>"]
readme = "README.md"
packages = [{include = "jd_pulse_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
black = "^23.1.0"
pytest = "^7.2.1"
openai = "^0.26.4"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
