[tool.poetry]
name = "model-tuning"
version = "0.1.0"
description = ""
authors = ["Maksim Panin <me@naxrevlis.com>"]
readme = "README.md"
packages = [{include = "model_tuning"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
